--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
         <div class="joke">260718 </div>
         <div class="joke">new year ritual : 00:00 a.m. </div>
         <div class="joke"> niche references  —  707 (nana lol) & d^=b[,7’ (sarawatine) </div>
-        <div class="joke"> compulsarily going no-contact before birthdays</div>
+        <div class="joke"> compulsorily going no-contact before birthdays</div>
       </div>
     </section>
 
